@@ -44,7 +44,8 @@
 
 package org.eclipse.jgit.fnmatch;
 
-import static org.junit.Assert.assertEquals;
+import static org.eclipse.jgit.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 
@@ -53,7 +54,7 @@ import org.junit.Test;
 
 public class FileNameMatcherTest {
 
-	private void assertMatch(final String pattern, final String input,
+	private static void assertMatch(final String pattern, final String input,
 			final boolean matchExpected, final boolean appendCanMatchExpected)
 			throws InvalidPatternException {
 		final FileNameMatcher matcher = new FileNameMatcher(pattern, null);
@@ -62,12 +63,13 @@ public class FileNameMatcherTest {
 		assertEquals(appendCanMatchExpected, matcher.canAppendMatch());
 	}
 
-	private void assertFileNameMatch(final String pattern, final String input,
+	private static void assertFileNameMatch(final String pattern,
+			final String input,
 			final char excludedCharacter, final boolean matchExpected,
 			final boolean appendCanMatchExpected)
 			throws InvalidPatternException {
 		final FileNameMatcher matcher = new FileNameMatcher(pattern,
-				new Character(excludedCharacter));
+				Character.valueOf(excludedCharacter));
 		matcher.append(input);
 		assertEquals(matchExpected, matcher.isMatch());
 		assertEquals(appendCanMatchExpected, matcher.canAppendMatch());
@@ -800,6 +802,46 @@ public class FileNameMatcherTest {
 	}
 
 	@Test
+	public void testEscapedBracket1() throws Exception {
+		assertMatch("\\[", "[", true, false);
+	}
+
+	@Test
+	public void testEscapedBracket2() throws Exception {
+		assertMatch("\\[[a]", "[", false, true);
+	}
+
+	@Test
+	public void testEscapedBracket3() throws Exception {
+		assertMatch("\\[[a]", "a", false, false);
+	}
+
+	@Test
+	public void testEscapedBracket4() throws Exception {
+		assertMatch("\\[[a]", "[a", true, false);
+	}
+
+	@Test
+	public void testEscapedBracket5() throws Exception {
+		assertMatch("[a\\]]", "]", true, false);
+	}
+
+	@Test
+	public void testEscapedBracket6() throws Exception {
+		assertMatch("[a\\]]", "a", true, false);
+	}
+
+	@Test
+	public void testEscapedBackslash() throws Exception {
+		assertMatch("a\\\\b", "a\\b", true, false);
+	}
+
+	@Test
+	public void testMultipleEscapedCharacters1() throws Exception {
+		assertMatch("\\]a?c\\*\\[d\\?\\]", "]abc*[d?]", true, false);
+	}
+
+	@Test
 	public void testFilePathSimpleCase() throws Exception {
 		assertFileNameMatch("a/b", "a/b", '/', true, false);
 	}
@@ -829,22 +871,22 @@ public class FileNameMatcherTest {
 		final String pattern = "helloworld";
 		final FileNameMatcher matcher = new FileNameMatcher(pattern, null);
 		matcher.append("helloworld");
-		assertEquals(true, matcher.isMatch());
-		assertEquals(false, matcher.canAppendMatch());
+		assertTrue(matcher.isMatch());
+		assertFalse(matcher.canAppendMatch());
 		matcher.reset();
 		matcher.append("hello");
-		assertEquals(false, matcher.isMatch());
-		assertEquals(true, matcher.canAppendMatch());
+		assertFalse(matcher.isMatch());
+		assertTrue(matcher.canAppendMatch());
 		matcher.append("world");
-		assertEquals(true, matcher.isMatch());
-		assertEquals(false, matcher.canAppendMatch());
+		assertTrue(matcher.isMatch());
+		assertFalse(matcher.canAppendMatch());
 		matcher.append("to much");
-		assertEquals(false, matcher.isMatch());
-		assertEquals(false, matcher.canAppendMatch());
+		assertFalse(matcher.isMatch());
+		assertFalse(matcher.canAppendMatch());
 		matcher.reset();
 		matcher.append("helloworld");
-		assertEquals(true, matcher.isMatch());
-		assertEquals(false, matcher.canAppendMatch());
+		assertTrue(matcher.isMatch());
+		assertFalse(matcher.canAppendMatch());
 	}
 
 	@Test
@@ -853,30 +895,30 @@ public class FileNameMatcherTest {
 		final FileNameMatcher matcher = new FileNameMatcher(pattern, null);
 		matcher.append("hello");
 		final FileNameMatcher childMatcher = matcher.createMatcherForSuffix();
-		assertEquals(false, matcher.isMatch());
-		assertEquals(true, matcher.canAppendMatch());
-		assertEquals(false, childMatcher.isMatch());
-		assertEquals(true, childMatcher.canAppendMatch());
+		assertFalse(matcher.isMatch());
+		assertTrue(matcher.canAppendMatch());
+		assertFalse(childMatcher.isMatch());
+		assertTrue(childMatcher.canAppendMatch());
 		matcher.append("world");
-		assertEquals(true, matcher.isMatch());
-		assertEquals(false, matcher.canAppendMatch());
-		assertEquals(false, childMatcher.isMatch());
-		assertEquals(true, childMatcher.canAppendMatch());
+		assertTrue(matcher.isMatch());
+		assertFalse(matcher.canAppendMatch());
+		assertFalse(childMatcher.isMatch());
+		assertTrue(childMatcher.canAppendMatch());
 		childMatcher.append("world");
-		assertEquals(true, matcher.isMatch());
-		assertEquals(false, matcher.canAppendMatch());
-		assertEquals(true, childMatcher.isMatch());
-		assertEquals(false, childMatcher.canAppendMatch());
+		assertTrue(matcher.isMatch());
+		assertFalse(matcher.canAppendMatch());
+		assertTrue(childMatcher.isMatch());
+		assertFalse(childMatcher.canAppendMatch());
 		childMatcher.reset();
-		assertEquals(true, matcher.isMatch());
-		assertEquals(false, matcher.canAppendMatch());
-		assertEquals(false, childMatcher.isMatch());
-		assertEquals(true, childMatcher.canAppendMatch());
+		assertTrue(matcher.isMatch());
+		assertFalse(matcher.canAppendMatch());
+		assertFalse(childMatcher.isMatch());
+		assertTrue(childMatcher.canAppendMatch());
 		childMatcher.append("world");
-		assertEquals(true, matcher.isMatch());
-		assertEquals(false, matcher.canAppendMatch());
-		assertEquals(true, childMatcher.isMatch());
-		assertEquals(false, childMatcher.canAppendMatch());
+		assertTrue(matcher.isMatch());
+		assertFalse(matcher.canAppendMatch());
+		assertTrue(childMatcher.isMatch());
+		assertFalse(childMatcher.canAppendMatch());
 	}
 
 	@Test
@@ -885,29 +927,29 @@ public class FileNameMatcherTest {
 		final FileNameMatcher matcher = new FileNameMatcher(pattern, null);
 		matcher.append("hello");
 		final FileNameMatcher copy = new FileNameMatcher(matcher);
-		assertEquals(false, matcher.isMatch());
-		assertEquals(true, matcher.canAppendMatch());
-		assertEquals(false, copy.isMatch());
-		assertEquals(true, copy.canAppendMatch());
+		assertFalse(matcher.isMatch());
+		assertTrue(matcher.canAppendMatch());
+		assertFalse(copy.isMatch());
+		assertTrue(copy.canAppendMatch());
 		matcher.append("world");
-		assertEquals(true, matcher.isMatch());
-		assertEquals(false, matcher.canAppendMatch());
-		assertEquals(false, copy.isMatch());
-		assertEquals(true, copy.canAppendMatch());
+		assertTrue(matcher.isMatch());
+		assertFalse(matcher.canAppendMatch());
+		assertFalse(copy.isMatch());
+		assertTrue(copy.canAppendMatch());
 		copy.append("world");
-		assertEquals(true, matcher.isMatch());
-		assertEquals(false, matcher.canAppendMatch());
-		assertEquals(true, copy.isMatch());
-		assertEquals(false, copy.canAppendMatch());
+		assertTrue(matcher.isMatch());
+		assertFalse(matcher.canAppendMatch());
+		assertTrue(copy.isMatch());
+		assertFalse(copy.canAppendMatch());
 		copy.reset();
-		assertEquals(true, matcher.isMatch());
-		assertEquals(false, matcher.canAppendMatch());
-		assertEquals(false, copy.isMatch());
-		assertEquals(true, copy.canAppendMatch());
+		assertTrue(matcher.isMatch());
+		assertFalse(matcher.canAppendMatch());
+		assertFalse(copy.isMatch());
+		assertTrue(copy.canAppendMatch());
 		copy.append("helloworld");
-		assertEquals(true, matcher.isMatch());
-		assertEquals(false, matcher.canAppendMatch());
-		assertEquals(true, copy.isMatch());
-		assertEquals(false, copy.canAppendMatch());
+		assertTrue(matcher.isMatch());
+		assertFalse(matcher.canAppendMatch());
+		assertTrue(copy.isMatch());
+		assertFalse(copy.canAppendMatch());
 	}
 }
